# system

./:    .env.template  .gitignore  a11y_notes.md  alacritty.nix  color.nix  configuration.nix  device.nix  dummy.lua  fish.nix  flake.nix  home.nix  i3.nix  keymap.json  kitty.nix  log  maskfile.md  result  result-man  settings.json  settings_backup.json  spawn.sh  starship.nix  start  startup  startup3  sway.nix  systems.nix  tunables.nix  update.nu  wezterm.lua  whisper-to-text.sh
.crush/: crush.db-shm  crush.db-wal
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
configuration/: args.nix  default.nix  linux.nix  mac.nix
hardware/: thinkpad.nix
home/: communication.nix  default.nix  media.nix  neovim-env.nix  zed.nix
mac/: default.nix  fonts.nix  yabai.nix
modules/: nix-config.nix
nixos/: ai.nix  common.nix  containers.nix  default.nix  gpu.nix  greeter.nix  performance.nix  postgres.nix  ssh.nix  standard.nix  virtualization.nix  webcam.nix
nvim/: init.nix
overlays/: default.nix  gcc_optimizations.nix  gcc_optimiztions.nix  optimizations.nix  rust_optimizations.nix  utils.nix  wallpapers.nix
platform/: linux.nix  mac.nix
rust_packages/: cargo-duplicates.nix  erdtree.nix
scripts/: clean_old_generations.sh  deploy-secrets.nix  deploy-secrets.py  zed-bisect.nu  (+2 more)
tools/: Cargo.toml  default.nix
tools/cams-home-utilities/: Cargo.toml
tools/cams-home-utilities/src/: battery.rs  main.rs  wallpaper.rs
tools/device-manager/: Cargo.toml
tools/device-manager/src/: main.rs
(+772 files in other folders)
